Multiple profile watermark alignment fix

--- a/assets/css/agent-customer.css
+++ b/assets/css/agent-customer.css
@@ -12123,7 +12123,7 @@ tr.t-dialer-b > td {
 
 .profile-not-found {
     width: 210px;
-    margin: 50px auto;
+    margin: 40px auto;
     text-align: center;
 }
 
